--- a/src/App.css
+++ b/src/App.css
@@ -1,16 +1,43 @@
-header-container{
+#header-container {
+  background-color: #35a5db;
+  color: #222;
+  width: 100vw;
+  max-width: 100%;
+  height: 10vh;
   display: flex;
+  align-items: center;
+  padding-left: 2.5vw;
+}
+
+#back-card-btn{
+  display: flex;
+  justify-content:flex-start;
+}
+
+#next-card-btn{
+  display: flex;
+  justify-content: flex-end;
+}
+
+#outer-layer{
+  background-color: gray;
+  max-width: 100%;
+  width: 100vw;
+}
+
+#user-card-info{
+  background-attachment: fixed;
+  background-color: white;
+  max-width: 80%;
+  width: 100vw;
+  margin:5%;
 
 }
 
-#header-display {
-  color:white;
-  background-color: blue;
-  width: 800px;
-  height:50px;
-
-}
-
-body{
-
+#top-display-number{
+  display: flex;
+  justify-content: flex-end;
+  margin:10px;
+  font-size: 30px;
+  color:red;
 }
